# CMakeList.txt : CMake project for CyanLogger, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CyanLogger")

# Add source to this project's executable.
add_executable (CyanLogger "CyanLogger.cpp" "CyanLogger.h")

# TODO: Add tests and install targets if needed.
